--- a/package.json
+++ b/package.json
@@ -19,5 +19,7 @@
     "preversion": "npm run lint",
     "postversion": "git push --follow-tags"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "semistandard": "^14.2.0"
+  }
 }
