--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "license": "MIT",
   "author": "Evan Plaice <evanplaice@gmail.com> (http://evanplaice.com/)",
-  "description": "A resume vanilla web component",
+  "description": "A resume.json vanilla web component",
   "keywords": [
     "web-components",
     "vanilla",
