--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@vanillawc/wc-resume",
-  "version": "1.0.0-alpha0",
+  "version": "1.0.0",
   "license": "MIT",
   "author": "Evan Plaice <evanplaice@gmail.com> (http://evanplaice.com/)",
   "description": "A resume.json vanilla web component",
