--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
   "repository": "https://github.com/vanillawc/wc-resume/",
   "main": "src/wc-resume.js",
   "scripts": {
-    "start": "npx live-server --open=dev",
+    "start": "npx live-server --no-browser --open=dev",
     "lint": "semistandard",
+    "build": "npx rollup --config .config/rollup.config.js ",
     "package": "npx rimraf package && npm pack | tail -n 1 | xargs tar -xf",
     "preversion": "npm run lint",
     "postversion": "git push --follow-tags"
